--- a/styles/projects.css
+++ b/styles/projects.css
@@ -2,8 +2,12 @@ body{
   padding: 0;
   margin: 0;
 }
+
 .project-list{
   font-family: 'Rationale', sans-serif;
+}
+.project{
+  margin: 0 10px 0 0;
 }
 .project img{
   margin: 0 10px 0 0;
@@ -18,4 +22,5 @@ body{
 .project-info h5{
   line-height: 0;
   font-size: 24px;
+  padding: 0 20px 0 0;
 }
