fixed about and hireme page

--- a/styles/main.css
+++ b/styles/main.css
@@ -43,8 +43,10 @@ html {
 }
 
 .job-title img{
-    width: 450px;
-    float: center;
+  width: 450px;
+  border-radius: 50%;
+  display: block;
+  margin: 0 auto;
 }
 
 .job-title h1{
