--- a/styles/graphics.css
+++ b/styles/graphics.css
@@ -3,9 +3,12 @@ body{
 }
 
 .graphics-heading{
-  font-size: 30px;
   text-align: center;
   font-family: 'Open Sans', sans-serif;
+}
+
+.graphics-heading h2{
+  font-size: 40px;
 }
 
 .vid{
