--- a/styles/hireme.css
+++ b/styles/hireme.css
@@ -20,9 +20,10 @@ body{
 
 .hireme-main h3{
   margin: 150px 0 0 0;
-  border-bottom: 2px solid orange;
-  width: 200px;
-  font-size: 32px;
+  text-align: center;
+  border-bottom: 3px solid orange;
+  width: 100%;
+  font-size: 40px;
 }
 
 .hireme-main p{
