--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,13 +1,15 @@
 body{
   padding: 0;
   margin: 0;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
 .project-list{
   font-family: 'Rationale', sans-serif;
 }
 .project{
-  margin: 0 10px 0 0;
+  margin: 10px 10px 0 0;
+  display: block;
 }
 .project img{
   margin: 0 10px 0 0;
@@ -36,7 +38,20 @@ body{
   padding: 0 0 10px 0;
 }
 .project-info h5{
-  line-height: 0;
+  line-height: 15px;
   font-size: 24px;
-  padding: 0 20px 0 0;
+  padding: 10px 10px 0 0;
+}
+
+.option-list{
+  margin-top: 25px;
+  padding: 0 0 0 40px;
+  line-height: 35px;
+  font-size: 30px;
+}
+.option-list a:hover{
+  text-decoration: none;
+}
+.options-bottom{
+  line-height: 25px;
 }
