--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,9 +1,3 @@
-body{
-  padding: 0;
-  margin: 0;
-  font-family: 'Roboto Condensed', sans-serif;
-}
-
 .project-list{
   font-family: 'Rationale', sans-serif;
 }
@@ -42,7 +36,7 @@ body{
   font-size: 24px;
   padding: 10px 10px 0 0;
 }
-
+/*
 .option-list{
   margin-top: 25px;
   padding: 0 0 0 40px;
@@ -55,3 +49,4 @@ body{
 .options-bottom{
   line-height: 25px;
 }
+*/
