--- a/styles/hireme.css
+++ b/styles/hireme.css
@@ -10,7 +10,10 @@ body{
 }
 
 .portrait-info h3:first-child{
-  float: left;
+  font-size: 24px;
+}
+.portrait-info h3:nth-child(3){
+  font-size: 18px;
 }
 
 .portrait-info h3{
