--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,7 @@
 html {
     font-family: 'Roboto Condensed', sans-serif;
-    margin: 0 0 0 0;
-    padding: 0 0 0 0;
+    margin: 0;
+    padding: 0;
     font-size: 14px;
     color: black;
     background-color: white;
@@ -36,9 +36,7 @@ html {
     color: orange;
 }
 
-.job-title {
-  font-family: 'Open Sans', sans-serif;
-}
+
 
 .job-title img{
   width: 300px;
@@ -81,8 +79,8 @@ html {
 
 /* Project stuff */
 #project-body{
-    margin: 0 70px 0 70px;
-    transition: 0.25s ease; /* transitions */
+  margin: 0 70px 0 70px;
+  transition: 0.25s ease; /* transitions */
 }
 .project-list{
   font-family: 'Rationale', sans-serif;
@@ -109,8 +107,8 @@ html {
   border-bottom: 3px solid grey;
 }
 
-.project-description h5{
-  font-size: 20px;
+.project-description p{
+  font-size: 18px;
 }
 
 .project-info{
