--- a/styles/hireme.css
+++ b/styles/hireme.css
@@ -9,7 +9,8 @@ body{
   padding: 0 10px 0 0;
 }
 
-.portrait-info h3:first-child{
+.portrait-info h3:nth-child(2){
+  padding: 20px 0 0 0;
   font-size: 24px;
 }
 .portrait-info h3:nth-child(3){
@@ -22,7 +23,7 @@ body{
 }
 
 .hireme-main h3{
-  margin: 150px 0 0 0;
+  margin: 100px 0 0 0;
   text-align: center;
   border-bottom: 3px solid orange;
   width: 100%;
