--- a/styles/hireme.css
+++ b/styles/hireme.css
@@ -38,3 +38,12 @@ body{
   display: block;
   margin: 0 auto;
 }
+
+
+@media(min-width: 640px){
+  html{ font-size: 112%; }
+}
+
+@media(min-width: 1024px){
+  html{ font-size: 120%; }
+}
