--- a/styles/graphics.css
+++ b/styles/graphics.css
@@ -16,7 +16,6 @@ body{
 .portrait-info h3:nth-child(3){
   font-size: 18px;
 }
-
 .portrait-info h3{
   margin: 20px 0 0 0;
   line-height: 10px;
@@ -35,18 +34,105 @@ body{
 
 .vid{
   text-align: center;
+  /* ----------*/
+  height: 0;
+  padding-bottom: 56.25%; /* 16:9 */
+  position: relative;
 }
 .vid iframe{
   padding: 20px 0 0 0;
-  width: 1120px;
-  height: 630px;
+  width: 100%;
+  height: %;
+  /* ----------*/
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
 }
 
+@media(max-width: 840px){
+  html{ font-size: 85%; }
 
-@media(min-width: 640px){
-  html{ font-size: 112%; }
+  body{
+
+  }
+
+  .graphics-heading{
+    text-align: center;
+    border-bottom: 3px solid yellow;
+    font-family: 'Open Sans', sans-serif;
+  }
+  .graphics-heading h2{
+    margin: 100px 0 10px 0;
+    font-size: 200%;
+  }
+
+  .vid{
+    text-align: center;
+    /* ----------*/
+    height: 0;
+    padding-bottom: 56.25%; /* 16:9 */
+    position: relative;
+  }
+  .vid iframe{
+    padding: 20px 0 0 0;
+    width: 100%;
+    height: %;
+    /* ----------*/
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+  }
 }
 
-@media(min-width: 1024px){
-  html{ font-size: 120%; }
+@media(max-width: 360px){
+  html{ font-size: 70%; }
+
+  body{
+
+  }
+
+  .portrait-info img{
+    float: left;
+    border-radius: 100%;
+    width: 40%;
+    padding: 0 10px 0 0;
+  }
+  .portrait-info h3:nth-child(2){
+    padding: 20px 0 0 0;
+    font-size: 24px;
+  }
+  .portrait-info h3:nth-child(3){
+    font-size: 18px;
+  }
+  .portrait-info h3{
+    margin: 20px 0 0 0;
+    line-height: 10px;
+  }
+
+  .graphics-heading{
+    text-align: center;
+    border-bottom: 3px solid yellow;
+    font-family: 'Open Sans', sans-serif;
+  }
+  .graphics-heading h2{
+    margin: 100px 0 10px 0;
+    font-size: 200%;
+  }
+
+  .vid{
+    text-align: center;
+    /* ----------*/
+    height: 0;
+    padding-bottom: 56.25%; /* 16:9 */
+    position: relative;
+  }
+  .vid iframe{
+    padding: 20px 0 0 0;
+    width: 100%;
+    height: %;
+    /* ----------*/
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+  }
 }
