--- a/styles/hireme.css
+++ b/styles/hireme.css
@@ -39,11 +39,51 @@ body{
   margin: 0 auto;
 }
 
+@media(max-width: 1024px){
+  html{ font-size: 120%; }
 
-@media(min-width: 640px){
-  html{ font-size: 112%; }
+  body{
+    width: 100%;
+  }
+
+  .portrait-info img{
+    float: left;
+    border-radius: 100%;
+    width: 140px;
+    padding: 0 10px 0 0;
+  }
+
+  .portrait-info h3:nth-child(2){
+    padding: 20px 0 0 0;
+    font-size: 24px;
+  }
+  .portrait-info h3:nth-child(3){
+    font-size: 18px;
+  }
+
+  .portrait-info h3{
+    margin: 20px 0 0 0;
+    line-height: 10px;
+  }
+
+  .hireme-main h3{
+    padding: 0 0 10px 0;
+    margin: 100px 0 10px 0;
+    text-align: center;
+    border-bottom: 3px solid orange;
+    width: 100%;
+    font-size: 40px;
+  }
+  .hireme-main p{
+    font-size: 20px;
+  }
+
+  .resume{
+    display: block;
+    margin: 0 auto;
+  }
 }
 
-@media(min-width: 1024px){
-  html{ font-size: 120%; }
+@media(max-width: 640px){
+  html{ font-size: 112%; }
 }
