--- a/styles/hireme.css
+++ b/styles/hireme.css
@@ -1,5 +1,5 @@
 body{
-  width: 100%;
+
 }
 
 .portrait-info img{
@@ -8,7 +8,6 @@ body{
   width: 140px;
   padding: 0 10px 0 0;
 }
-
 .portrait-info h3:nth-child(2){
   padding: 20px 0 0 0;
   font-size: 24px;
@@ -16,7 +15,6 @@ body{
 .portrait-info h3:nth-child(3){
   font-size: 18px;
 }
-
 .portrait-info h3{
   margin: 20px 0 0 0;
   line-height: 10px;
@@ -31,28 +29,51 @@ body{
   font-size: 40px;
 }
 .hireme-main p{
-  font-size: 20px;
+  font-size: 150%;
 }
 
-.resume{
+iframe{
+  width: 100%;
+  height: 1350px;
   display: block;
   margin: 0 auto;
 }
 
-@media(max-width: 1024px){
-  html{ font-size: 120%; }
+@media(max-width: 840px){
+  html{ font-size: 85%; }
 
   body{
-    width: 100%;
+
   }
 
   .portrait-info img{
-    float: left;
-    border-radius: 100%;
     width: 140px;
-    padding: 0 10px 0 0;
   }
 
+  .hireme-main p{
+    font-size: 120%;
+  }
+
+  .graphics-heading{
+    text-align: center;
+    border-bottom: 3px solid yellow;
+    font-family: 'Open Sans', sans-serif;
+  }
+  .graphics-heading h2{
+    margin: 100px 0 10px 0;
+    font-size: 200%;
+  }
+}
+
+@media(max-width: 480px){
+  html{ font-size: 70%; }
+  body{
+
+  }
+
+  .portrait-info img{
+    width: 30%;
+  }
   .portrait-info h3:nth-child(2){
     padding: 20px 0 0 0;
     font-size: 24px;
@@ -60,30 +81,22 @@ body{
   .portrait-info h3:nth-child(3){
     font-size: 18px;
   }
-
   .portrait-info h3{
     margin: 20px 0 0 0;
     line-height: 10px;
   }
 
-  .hireme-main h3{
-    padding: 0 0 10px 0;
-    margin: 100px 0 10px 0;
-    text-align: center;
-    border-bottom: 3px solid orange;
-    width: 100%;
-    font-size: 40px;
-  }
   .hireme-main p{
-    font-size: 20px;
+    font-size: 100%;
   }
 
-  .resume{
-    display: block;
-    margin: 0 auto;
+  .graphics-heading{
+    text-align: center;
+    border-bottom: 3px solid yellow;
+    font-family: 'Open Sans', sans-serif;
   }
-}
-
-@media(max-width: 640px){
-  html{ font-size: 112%; }
+  .graphics-heading h2{
+    margin: 100px 0 10px 0;
+    font-size: 200%;
+  }
 }
