optimized sidebar (position: fixed)

--- a/styles/main.css
+++ b/styles/main.css
@@ -160,16 +160,18 @@ html {
 }
 
 /* Sidebar stuff */
+
+
 #more-info{
-    color: black;
-    background-color: white;
-    border-left: solid 2px darkgrey;
-    width: 0px;
-    transition: width 0.25s ease;
-    height: 100%;
-    position: absolute;
-    right: 0;
-    top: 0;
+  position:fixed;
+  color: black;
+  background-color: white;
+  border-left: solid 2px darkgrey;
+  width: 0px;
+  transition: width 0.25s ease;
+  height: 100%;
+  right: 0;
+  top: 0;
 }
 
 .option-list{
