--- a/styles/hireme.css
+++ b/styles/hireme.css
@@ -32,7 +32,7 @@ body{
   font-size: 150%;
 }
 
-iframe{
+.resume{
   width: 100%;
   height: 1350px;
   display: block;
@@ -63,6 +63,7 @@ iframe{
     margin: 100px 0 10px 0;
     font-size: 200%;
   }
+
 }
 
 @media(max-width: 480px){
