--- a/styles/hireme.css
+++ b/styles/hireme.css
@@ -32,12 +32,11 @@ body{
   font-size: 150%;
 }
 
-.resume{
-  width: 100%;
-  height: 1350px;
-  display: block;
-  margin: 0 auto;
+.resume-contain{
+  text-align: center;
+  margin: 20px;
 }
+
 
 @media(max-width: 840px){
   html{ font-size: 85%; }
